Update add more entry

--- a/configs/config.env.example
+++ b/configs/config.env.example
@@ -4,3 +4,5 @@ DB_URI=
 GEO_CODER_PROVIDER=
 GEO_CODER_CONSUMER_KEY=
 GEO_CODER_CONSUMER_SECRET=
+FILE_SIZE_LIMIT_BYTES=
+UPLOAD_FOLDER=./public/images/bootcamps
