Add jwt secret and expiary keys

--- a/configs/config.env.example
+++ b/configs/config.env.example
@@ -6,3 +6,5 @@ GEO_CODER_CONSUMER_KEY=
 GEO_CODER_CONSUMER_SECRET=
 FILE_SIZE_LIMIT_BYTES=
 UPLOAD_FOLDER=./public/images/bootcamps
+JWT_SECRET=
+JWT_EXPIRES=
