Add SMTP env examples

--- a/configs/config.env.example
+++ b/configs/config.env.example
@@ -1,11 +1,22 @@
 NODE_ENV=Development
 PORT=
+
 DB_URI=
+
 GEO_CODER_PROVIDER=
 GEO_CODER_CONSUMER_KEY=
 GEO_CODER_CONSUMER_SECRET=
+
 FILE_SIZE_LIMIT_BYTES=
 UPLOAD_FOLDER=./public/images/bootcamps
+
 JWT_SECRET=
 JWT_EXPIRES=
 JWT_COOKIE_EXPIRES=
+
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USERNAME_OR_EMAIL=
+SMTP_PASSWORD=
+FROM_EMAIL=
+FROM_NAME=
