--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.10.0",
     "node-geocoder": "^3.27.0",
     "nodemailer": "^6.5.0",
-    "slugify": "^1.5.0"
+    "slugify": "^1.5.0",
+    "xss-clean": "^0.1.1"
   }
 }
