--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "nodemailer": "^6.5.0",
     "slugify": "^1.5.0",
     "xss-clean": "^0.1.1"
+  },
+  "devDependencies": {
+    "supertest": "^6.1.3"
   }
 }
