--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "test": "mocha",
     "start": "NODE_ENV=Production node server.js",
     "dev": "nodemon server.js"
   },
